# ModelConverterTool

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.0.8  Dockerfile  GPU_SERVER_TESTING.md  MANIFEST.in  README.md  TENSOR_PARALLEL_IMPROVEMENTS.md  batch_real_example.yaml  check_quant_deps.py  ci_fast_test.py  ci_slow_test.py  click_cli_example.py  conversion_authenticity_results.json  conversion_correctness_results.json  create_multi_rank_conversion.py  cursor_summarize_megatron2hf_model_supp.md  demo_gpt2_conversion.py  disable_mps.py  docker-compose.yml  download_gpt2_to_workspace.py  env.example  gpt2_download.py  improvements.md  install.sh  install_mlx.py  install_system_deps.sh  install_tsinghua.sh  model_converter.py  opt-125m_download.py  optimization_summary.md  pre_commit_test.py  pre_download_models.py  pyproject.toml  pytest.ini  quick_gpu_test.py  requirements-ci.txt  requirements-mac.txt  (+28 more)
.github/workflows/: ci.yml  python-tests.yml  quick-test.yml
app/: api.py  cache.py  config.py  converter.py  main.py  schemas.py  tasks.py  utils.py  validator.py  websocket.py
configs/: batch_template.yaml  gpt2_batch.yaml  model_presets.yaml  my_batch_test.yaml
docs/: cli.md  config.md  converter.md  index.html  index.md  megatron.md  model_converter_tool.html  search.js  tensor_parallel.md
docs/model_converter_tool/: cli.html  config.html  converter.html  disable_mps.html  engine.html  utils.html  validator.html
docs/model_converter_tool/engine/: awq.html  fp16.html  gguf.html  gptq.html  hf.html  mlx.html  onnx.html  safetensors.html  torchscript.html
examples/: README.md  batch_real_example.yaml  example_api.py  example_basic.py  example_batch.py  example_fake_weight.py  example_mup2llama.py  example_quantization.py  example_tensor_parallel.py
examples/mlx/lora/: utils.py
examples/mlx/whisper/: setup.py
llama.cpp/: requirements.txt
llama.cpp_old/: convert_hf_to_gguf.py
llama.cpp_old/gguf-py/gguf/: constants.py
megatron_converters/: __init__.py  ckpt_to_hf_minicpm_with_tp_pp.py  dist_ckpt_to_hf_minicpm.py  dist_ckpt_to_hf_minicpm4.py  hf_to_megatron_minicpm.py  hf_to_megatron_minicpm4.py  loader_llama2.py  loader_llama2_hf.py  loader_llama_mistral.py  loader_minicpm_hf.py  setter.py  smart_converter.py  tp_pp_converter.py  utils.py
megatron_converters/megatron/: __init__.py
megatron_converters/megatron/core/: inference_params.py  model_parallel_config.py  package_info.py  parallel_state.py  timers.py  utils.py
megatron_converters/megatron/core/datasets/: bert_dataset.py  blended_dataset.py  blended_megatron_dataset_builder.py  blended_megatron_dataset_config.py  gpt_dataset.py  indexed_dataset.py  masked_dataset.py  megatron_dataset.py  megatron_tokenizer.py  multimodal_dataset.py  t5_dataset.py  utils.py
megatron_converters/megatron/core/transformer/: mlp.py  (+8 more)
megatron_converters/megatron/inference/: arguments.py  text_generation_server.py
megatron_converters/megatron/legacy/: __init__.py  indexer.py
megatron_converters/megatron/training/: __init__.py  arguments.py  async_utils.py  checkpointing.py  global_vars.py  initialize.py  microbatches.py  optimizer_param_scheduler.py  theoretical_memory_usage.py  training.py  utils.py  yaml_arguments.py
model_converter_tool/: __init__.py  api.py  cli.py  cli_native.py  config.py  converter.py  disable_mps.py  disk_space.py  utils.py  validator.py
model_converter_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model_converter_tool/commands/: __init__.py  batch.py  cache.py  check.py  config.py  convert.py  history.py  inspect.py  list_cmd.py  to_llama_format.py  validate.py  version.py
model_converter_tool/core/: cache.py  check.py  config.py  conversion.py  convert.py  history.py  inspect.py  listing.py  validation.py
model_converter_tool/engine/: awq.py  ax.py  custom_quant.py  fp16.py  gguf.py  gptq.py  hf.py  megatron2hf.py  mlx.py  mtk.py  onnx.py  qnn.py  rk.py  safetensors.py  torchscript.py
models/facebook_opt_125m/: generation_config.json
opt-125m-local/: config.json
quantized_gpt2_dir_inner/: config.json
rfd/: 0000-template.md  0001-tool-spec.md
src/: __init__.py  converter.py  validator.py
test_download/: README.md  config.json  configuration_minicpm.py  modeling_minicpm.py
test_gptq_local/: test_gptqmodel_cpu.py
test_gptq_local/opt-125m-gptqmodel-quantized-cpu_inner/: config.json
tests/: README.md  conftest.py  integration_manual.py  test_api_usage.py  test_basic.py  test_basic_conversions.py  test_batch_conversion.py  test_cli.py  test_disk_space.py  test_dummy_model_conversion.py  test_fake_weight.py  test_gpt2_conversion.py  test_gpt2_conversion_ci.py  test_hf_endpoint.py  test_integration.py  test_minicpm_to_llama_ci.py  test_mtk_final_conversion.py  test_mup2llama.py  test_quantization.py  test_utils.py  test_validator.py
tools/: check_hf_endpoint.py  convert-hf-to-gguf.py
tools/llama.cpp/: convert_hf_to_gguf.py  requirements.txt
tools/mlx-examples/: README.md  llms_llama_convert.py
venv311/: pyvenv.cfg
venv_py311/: pyvenv.cfg
(+134 files in other folders)
