[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-converter-tool"
version = "1.0.0"
description = "A CLI and API tool for converting machine learning models between formats."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
    "safetensors",
    "click"
    # 其他依赖...
]

[project.scripts]
model-converter = "model_converter_tool.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_converter_tool*"] 