[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-converter-tool"
version = "1.0.0"
description = "A comprehensive tool for converting between different model formats"
authors = [{name = "Model Converter Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "safetensors>=0.4.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "llama-cpp-python>=0.2.0",
    "mlx>=0.0.8",
    "gptqmodel>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
test = ["pytest"]

[project.scripts]
model-converter = "model_converter_tool.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_converter_tool*"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["__init__.py"]
known_first_party = ["model_converter_tool"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501", "F401", "F811"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 