[metadata]
name = model-converter-tool
version = 1.0.0
description = A CLI and API tool for converting machine learning models between formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duoyuncloud/ModelConverterTool
author = Model Converter Team
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = .
install_requires =
    torch>=2.0.0
    transformers>=4.30.0
    tokenizers>=0.13.0
    accelerate>=0.20.0
    safetensors>=0.4.0
    numpy>=1.21.0
    tqdm>=4.64.0
    onnx>=1.14.0
    onnxruntime>=1.15.0
    llama-cpp-python>=0.2.0
    mlx>=0.0.8
    gptqmodel>=0.1.0
include_package_data = True

[options.packages.find]
include = model_converter_tool*

[options.entry_points]
console_scripts =
    model-converter = model_converter_tool.cli:cli 